// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders space horizontal 1`] = `
<div
  className="space space_type-horizontal"
>
  <div
    className="space__horizontal_size-medium"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="space__horizontal_size-medium"
  >
    <div>
      1
    </div>
  </div>
</div>
`;

exports[`renders space vertical 1`] = `
<div
  className="space space_type-vertical"
>
  <div
    className="space__vertical_size-medium"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="space__vertical_size-medium"
  >
    <div>
      1
    </div>
  </div>
</div>
`;
